namespace Optsol.Components.Repository.Domain.Entities
{
    public interface IAggregateRoot : IEntityCreatable
    {
        
    }
}
